Fixed x axis overflowing because of width: 100vw property ignoring the scrollbar

--- a/app/assets/stylesheets/persons.scss
+++ b/app/assets/stylesheets/persons.scss
@@ -80,7 +80,6 @@ body {
 	font-weight: 300;
 	font-size: 18px;
 	border-top: 0.5vh solid $basecolor;
-	overflow-x: hidden;
 }
 
 h1,
@@ -147,7 +146,7 @@ p {
 
 .header {
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	background-color: $dark-background-color;
 	color: white;
 }
